[tool.poetry]
name = "get-api-data"
version = "0.1.0"
description = ""
authors = ["Sergey <serega.tiuriuhanov94@gmail.com>"]
readme = "README.md"
packages = [{include = "get_api_data"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
